--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,29 @@
-html,
+@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: ghostwhite;
 }
 
-a {
-  color: inherit;
+.header {
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 12px 10px;
+  font-size: 25px;
+
+}
+
+.header a {
+  color: black;
+  display: inline-block;
+  padding-top: 10px;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+main {
+  max-width: 80%;
+  margin: 0 auto;
+  padding-top: 30px;
+  padding-bottom: 80px;
+
 }
